# pairwell-search

./: Makefile  README.md  app.py  pyproject.toml  requirements.txt  users.csv
.github/workflows/: tests.yml
models/: two_tower.py
pairwell-search/: app.py
pairwell-search/services/: db.py
services/: api_clients.py  candid_api.py  candid_pull.py  db.py  embedding_service.py  geocode_city.py  interest_expansion.py  recommend.py  similarity.py  visualize.py
services/apis/: candid_api.py
services/data_pulls/: candid_pull.py
services/data_pulls/seed_scripts/: create_seed_user_vectors.py  fill_in_np_vectors.py  seed_user_activity.py
src/pairwell_search/models/: preprocessing_1758161083.pkl  two_tower.py  two_tower_trained_1758045999.pt
src/pairwell_search/services/: db.py  embedding_service.py  geocode_city.py  recommend.py  similarity.py
src/pairwell_search/services/apis/: candid_api.py
src/pairwell_search/services/data_pulls/: candid_pull.py
src/pairwell_search/services/data_pulls/seed_scripts/: create_seed_user_vectors.py  fill_in_np_vectors.py  seed_user_activity.py  seed_users_creation.py
src/pairwell_search/services/data_pulls/two_tower/: dataloader.py
tests/: conftest.py  test_candid_api.py  test_db.py  test_embeddings.py  test_interest_expansion.py  test_recommend.py  test_similarity.py  test_vector_search.py
