[project]
name = "pairwell_search"
version = "0.1.0"
description = "AI-powered nonprofit recommendation engine"
authors = [
    { name = "Logan" }
]
dependencies = [
    "numpy",
    "faiss-cpu",
    "requests",
    "streamlit",
    "pandas",
    "scikit-learn",
    "matplotlib"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
